@@ -1,4 +1,4 @@
 ;; Automatically generated file (don't edit)
 (module tools_date (export (bigloo-date)))
 
-(define (bigloo-date)  " Mon Aug 31 10:31:06 CEST 2009 ")
+(define (bigloo-date)  " Mon Aug 31 17:34:18 CEST 2009 ")
